@@ -592,3 +592,14 @@ breaks <- function(lex, time.scale)
   time.scale <- check.time.scale(lex, time.scale)[1]
   return(attr(lex, "breaks")[[time.scale]])
 }
+
+transform.Lexis <- function(`_data`, ... )
+{
+    save.at <- attributes(`_data`)
+    ## We can't use NextMethod here because of the special scoping rules
+    ## used by transform.data.frame
+    y <- base:::transform.data.frame(`_data`, ...)
+    save.at[["names"]] <- attr(y, "names")
+    attributes(y) <- save.at
+    y
+}
